<?xml version="1.0" encoding="UTF-8"?>

    -<FrameLayout tools:context="com.qboxus.binder.Accounts.Get_User_Info_A" android:id="@+id/Get_Info_F" android:background="@color/light_white" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">


    -<RelativeLayout android:layout_height="match_parent" android:layout_width="match_parent">


    -<androidx.appcompat.widget.Toolbar android:id="@+id/toolbar" android:layout_height="45dp" android:layout_width="match_parent" android:layout_alignParentTop="true" app:contentInsetStart="0dp" app:contentInsetLeft="0dp" android:layout_weight="1">

    <RelativeLayout android:layout_height="match_parent" android:layout_width="match_parent"> </RelativeLayout>

</androidx.appcompat.widget.Toolbar>


    -<LinearLayout android:layout_height="match_parent" android:layout_width="match_parent" android:layout_below="@id/toolbar" android:weightSum="4" android:orientation="vertical">


    -<LinearLayout android:layout_height="match_parent" android:layout_width="match_parent" android:layout_weight="1" android:orientation="vertical">


    -<RelativeLayout android:layout_height="150dp" android:layout_width="150dp" android:layout_gravity="center">

    <de.hdodenhof.circleimageview.CircleImageView android:id="@+id/profile_image" android:layout_height="150dp" android:layout_width="150dp" android:layout_centerHorizontal="true" android:src="@drawable/profile_image_placeholder"/>

    <ImageButton android:id="@+id/edit_profile_image" android:background="@color/transparent" android:layout_height="40dp" android:layout_width="40dp" android:src="@drawable/ic_round_edit_color" android:layout_alignParentBottom="true" android:layout_alignParentEnd="true" android:scaleType="fitXY"/>

</RelativeLayout>


    -<LinearLayout android:background="@drawable/d_bottom_gray_line" android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="horizontal" android:paddingEnd="10dp" android:paddingStart="10dp" android:layout_marginTop="15dp">

    <EditText android:id="@+id/first_name" android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_weight="1" android:textColor="@color/black" android:backgroundTint="@color/transparent" android:inputType="textCapWords" android:textSize="15dp" android:textColorHint="@color/black" android:hint="@string/first_name" android:text=""/>

    <EditText android:id="@+id/last_name" android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_weight="1" android:textColor="@color/black" android:backgroundTint="@color/transparent" android:inputType="textCapWords" android:textSize="15dp" android:textColorHint="@color/black" android:hint="@string/last_name" android:text=""/>

</LinearLayout>


    -<RelativeLayout android:background="@drawable/d_bottom_gray_line" android:layout_height="wrap_content" android:layout_width="match_parent">

    <EditText android:id="@+id/dateofbirth_edit" android:layout_height="wrap_content" android:layout_width="match_parent" android:paddingEnd="10dp" android:paddingStart="10dp" android:layout_marginTop="15dp" android:textColor="@color/black" android:backgroundTint="@color/transparent" android:inputType="textCapWords" android:textSize="15dp" android:textColorHint="@color/black" android:hint="@string/date_of_birth" android:paddingBottom="10dp" android:paddingTop="10dp" android:focusable="false" android:clickable="false"/>

</RelativeLayout>


    -<RadioGroup android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="horizontal" android:paddingStart="10dp" android:layout_marginTop="15dp">

    <RadioButton android:id="@+id/male_btn" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_weight="1" android:textColor="@color/black" android:textSize="15dp" android:text="@string/male" android:theme="@style/RadioButton" android:checked="true"/>

    <RadioButton android:id="@+id/female_btn" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_weight="1" android:textColor="@color/black" android:textSize="15dp" android:text="@string/female" android:theme="@style/RadioButton"/>

</RadioGroup>

</LinearLayout>


    -<LinearLayout android:layout_height="match_parent" android:layout_width="match_parent" android:layout_weight="3" android:gravity="center">

    <Button android:id="@+id/nextbtn" android:background="@drawable/ic_pink_background" android:layout_height="50dp" android:layout_width="match_parent" android:textColor="@color/white" android:textSize="15dp" android:text="@string/next" android:layout_marginEnd="15dp" android:layout_marginStart="15dp"/>

</LinearLayout>

</LinearLayout>

</RelativeLayout>

</FrameLayout>