<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/light_white"
    android:id="@+id/Get_Info_Interest"
    tools:context="com.qboxus.pepinder.Accounts.Get_User_Info_B">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="1"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            android:layout_alignParentTop="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">



            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                android:weightSum="4">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="30dp"
                        android:gravity="center"
                        android:text="@string/interested_meeting_in"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btnMan"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/ic_pink_background"
                            android:text="@string/male" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btnWomen"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/ic_pink_background"
                            android:text="@string/female" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btnBoth"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/ic_pink_background"
                            android:text="@string/both" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>


    </RelativeLayout>

</FrameLayout>

